--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+>
 <head>
     <meta charset="UTF-8">
     <title>Owners</title>
 </head>
 <body>
-    <h1 th:text="'Owners index page'">Page</h1>
-    <table>
+    <h1 th:text="#{owners}">Page</h1>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th style="width: 150px;">ID</th>
+            <th style="width: 200px;" th:text="#{name}"></th>
+            <th style="width: 120px" th:text="#{lastName}"></th>
         </tr>
         </thead>
         <tbody>
